--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=financefamilly
-DB_USERNAME=bilel
-DB_PASSWORD=admin
+DB_USERNAME=root
+DB_PASSWORD=Direction@inf913
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
